squashing some bugs

--- a/react-vite/src/components/TrackComponents/TrackFormPage/TrackForm.css
+++ b/react-vite/src/components/TrackComponents/TrackFormPage/TrackForm.css
@@ -6,3 +6,8 @@
     display: flex;
     flex-direction: column;
 }
+
+.submitButtonWithLoadingIcon {
+    display: flex;
+    height: 40px;
+}
